gs/devices/vector/gdevpdti.c
@@ -581,9 +581,11 @@ pdf_start_charproc_accum(gx_device_pdf *pdev)
 {
     pdf_char_proc_t *pcp;
     pdf_resource_t *pres;
-    int code = pdf_enter_substream(pdev, resourceCharProc, gs_next_ids(pdev->memory, 1),
+    int id = gs_next_ids(pdev->memory, 1);
+    int code = pdf_enter_substream(pdev, resourceCharProc, id,
                                    &pres, false, pdev->CompressFonts);
 
+    pres->rid = id;
     if (code < 0)
        return code;
     pcp = (pdf_char_proc_t *)pres;
